# poly-match

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  pyproject.toml  release.sh  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: codeql.yml  pre-commit-update.yml  python-publish.yml  test.yml
polymatch/: __init__.py  base.py  error.py  registry.py
polymatch/matchers/: glob.py  regex.py  standard.py
scripts/: fix_pre_commit.py
tests/: test_glob.py  test_pickling.py  test_regex.py  test_standard.py
